SMA-X/GKE/smax_gke_cdf-svc-InternalTCPLB.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/load-balancer-type: Internal
  name: nginx-ingress-controller-svc
  namespace: core
spec:
  ports:
  - name: https-1
    port: 5443
    protocol: TCP
    targetPort: 8443
  - name: https-2
    port: 5444
    protocol: TCP
    targetPort: 8444
  selector:
    k8s-app: nginx-ingress-lb
  sessionAffinity: None
  type: LoadBalancer
